Refactor tidy BeanDescriptor, no effective change